--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "node dist/index.js",
     "tsc": "tsc",
     "test": "jest --verbose",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "seed": "ts-node-dev src/seed/seed-database.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -29,6 +31,7 @@
     "@types/node": "^20.12.13",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "prisma": "^5.15.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
     "ts-node-dev": "^2.0.0",
