--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
-    "tsc": "tsc",
+    "build": "tsc",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
     "seed": "ts-node-dev src/seed/seed-database.ts"
