--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "npm run prisma:deploy && tsc",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
+    "prisma:deploy": "npx prisma migrate deploy && prisma generate",
     "seed": "ts-node-dev src/seed/seed-database.ts"
   },
   "keywords": [],
