--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "build": "npm run prisma:deploy && tsc",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
